# ruest

./: .gitignore  ARCHITECTURE.md  BRD&PRD.md  BRD&PRD_PRISMA.md  Cargo.toml  LICENSE  README.md
benchmarks/: README.md
benchmarks/axum-baseline/: Cargo.toml
benchmarks/axum-baseline/src/: main.rs
benchmarks/scripts/: load_test.sh
docs/: DX.md  FORGEDB.md  HTTP_FEATURES.md  PERFORMANCE.md  PRINCIPES.md  PUBLISHING.md  RUESTDB.md  SECURITY.md
examples/basic-api/: Cargo.toml
examples/basic-api/src/: app_module.rs  main.rs
examples/basic-api/src/products/: dto.rs  mod.rs  products_controller.rs  products_module.rs  products_service.rs
examples/basic-api/src/users/: dto.rs  mod.rs  users_controller.rs  users_module.rs  users_service.rs
examples/forgedb-demo/: Cargo.toml  build.rs  schema.forge
examples/forgedb-demo/src/: main.rs
examples/ruest-db-demo/: Cargo.toml  build.rs  schema.ruest
examples/ruest-db-demo/src/: main.rs
examples/shop-api/: Cargo.toml  README.md  schema.forge  schema.ruest
examples/shop-api/src/: app_module.rs  main.rs
examples/shop-api/src/common/: mod.rs
examples/shop-api/src/config/: mod.rs
examples/shop-api/src/modules/: mod.rs
examples/shop-api/src/modules/auth/: auth_controller.rs  auth_module.rs  mod.rs
examples/shop-api/src/modules/auth/dto/: mod.rs
examples/shop-api/src/modules/customers/: customers_controller.rs  customers_module.rs  customers_repository.rs  customers_service.rs  mod.rs
examples/shop-api/src/modules/customers/dto/: mod.rs
examples/shop-api/src/modules/customers/entities/: mod.rs
examples/shop-api/src/modules/orders/: mod.rs  orders_controller.rs  orders_module.rs  orders_repository.rs  orders_service.rs
examples/shop-api/src/modules/orders/dto/: mod.rs
examples/shop-api/src/modules/orders/entities/: mod.rs
forge-db/codegen/: Cargo.toml
forge-db/codegen/src/: lib.rs  naming.rs  rust_client.rs  sql.rs
forge-db/migrate/: Cargo.toml
forge-db/migrate/src/: lib.rs
forge-db/parser/: Cargo.toml
forge-db/parser/src/: lib.rs  parse.rs
forge-db/runtime/: Cargo.toml
forge-db/runtime/src/: lib.rs
forge-db/schema/: Cargo.toml
forge-db/schema/src/: lib.rs
ruest/: Cargo.toml
ruest-db/: Cargo.toml
ruest-db/codegen/: Cargo.toml
ruest-db/codegen/src/: lib.rs  naming.rs  rust_client.rs  sql.rs
ruest-db/migrate/: Cargo.toml
ruest-db/migrate/src/: lib.rs
ruest-db/parser/: Cargo.toml
ruest-db/parser/src/: lib.rs  parse.rs
ruest-db/runtime/: Cargo.toml
ruest-db/schema/: Cargo.toml
ruest-db/src/: lib.rs  migrate.rs  runtime.rs  schema.rs
ruest-db/src/codegen/: mod.rs  naming.rs  rust_client.rs  sql.rs
ruest-db/src/parser/: mod.rs  parse.rs
ruest/benches/: container_resolve.rs  join_paths.rs
ruest/cli/: Cargo.toml
ruest/cli/src/: db.rs  generate.rs  main.rs  new.rs  templates.rs  util.rs
ruest/config/: Cargo.toml
ruest/config/src/: lib.rs  settings.rs
ruest/core/: Cargo.toml
ruest/core/src/: app.rs  context.rs  error.rs  factory.rs  module.rs  plugin.rs
ruest/core/tests/: module_configure.rs
ruest/di/: Cargo.toml
ruest/di/benches/: container_resolve.rs
ruest/di/src/: container.rs
ruest/di/tests/: container_test.rs
ruest/http/: Cargo.toml
ruest/http/src/: axum_features.rs  result.rs  server.rs
ruest/logger/: Cargo.toml
ruest/macros/: Cargo.toml
ruest/macros/src/: controller.rs  guard.rs  lib.rs  module.rs  route.rs  service.rs
ruest/router/: Cargo.toml
ruest/router/benches/: join_paths.rs
ruest/router/src/: registry.rs  route.rs
ruest/security/: Cargo.toml
ruest/security/src/: claims.rs  config.rs  context.rs  error.rs  extract.rs  guard.rs  jwt.rs  layer.rs  lib.rs  module.rs  provider.rs
ruest/security/tests/: jwt_test.rs
ruest/src/: bootstrap.rs  lib.rs
ruest/src/config/: settings.rs
ruest/src/core/: app.rs  context.rs  error.rs  factory.rs  mod.rs  module.rs  plugin.rs
ruest/src/di/: container.rs  error.rs  inject.rs  mod.rs  provider.rs
ruest/src/http/: middleware.rs  mod.rs  response.rs  server.rs
ruest/src/logger/: mod.rs
ruest/src/router/: mod.rs  path.rs  registry.rs
ruest/src/security/: claims.rs  config.rs  context.rs  error.rs  extract.rs  guard.rs  jwt.rs  layer.rs  module.rs  provider.rs
ruest/src/testing/: mod.rs
ruest/src/validation/: extract.rs  mod.rs
ruest/testing/: Cargo.toml
ruest/testing/src/: lib.rs
ruest/tests/: container_test.rs  framework_integration.rs  jwt_test.rs  module_configure.rs  principles.rs  workspace_structure.rs
ruest/validation/: Cargo.toml
ruest/validation/src/: error.rs  extract.rs
rustforge/: Cargo.toml
rustforge/cli/: Cargo.toml
rustforge/cli/src/: db.rs  generate.rs  main.rs  new.rs  templates.rs
rustforge/config/: Cargo.toml
rustforge/config/src/: error.rs  lib.rs  settings.rs
rustforge/core/: Cargo.toml
rustforge/core/src/: app.rs  context.rs  error.rs  factory.rs  lib.rs  module.rs  plugin.rs
rustforge/core/tests/: module_configure.rs
rustforge/di/: Cargo.toml
rustforge/di/src/: container.rs  error.rs  inject.rs  lib.rs  provider.rs  scope.rs
rustforge/di/tests/: container_test.rs
rustforge/http/: Cargo.toml
rustforge/http/src/: axum_features.rs  error.rs  extract.rs  lib.rs  middleware.rs  result.rs  server.rs
rustforge/logger/: Cargo.toml
rustforge/logger/src/: lib.rs
rustforge/macros/: Cargo.toml
rustforge/macros/src/: controller.rs  guard.rs  lib.rs  module.rs  route.rs  service.rs
rustforge/router/: Cargo.toml
rustforge/router/src/: lib.rs  path.rs  route.rs
rustforge/security/: Cargo.toml
rustforge/security/src/: claims.rs  config.rs  context.rs  error.rs  extract.rs  guard.rs  jwt.rs  lib.rs  module.rs  provider.rs
rustforge/security/tests/: jwt_test.rs
rustforge/src/: bootstrap.rs  lib.rs
rustforge/testing/: Cargo.toml
rustforge/testing/src/: lib.rs
rustforge/tests/: framework_integration.rs  workspace_structure.rs
rustforge/validation/: Cargo.toml
rustforge/validation/src/: lib.rs
scripts/: publish-crates.sh
