[workspace]
resolver = "2"
members = [
    "rustforge/core",
    "rustforge/macros",
    "rustforge/di",
    "rustforge/router",
    "rustforge/http",
    "rustforge/config",
    "rustforge/validation",
    "rustforge/logger",
    "rustforge/testing",
    "rustforge/security",
    "rustforge/cli",
    "rustforge",
    "examples/basic-api",
    "examples/shop-api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["RustForge Contributors"]
repository = "https://github.com/rustforge/rustforge"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
# Toutes les fonctionnalités Axum recommandées pour RustForge (HTTP/1+2, WS, multipart, etc.)
axum = { version = "0.7", features = [
    "http1",
    "http2",
    "json",
    "macros",
    "matched-path",
    "multipart",
    "original-uri",
    "tokio",
    "tower-log",
    "tracing",
    "ws",
    "form",
    "query",
] }
hyper = { version = "1", features = ["http1", "http2", "server", "client"] }
tower = { version = "0.5" }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1"
anyhow = "1"
validator = { version = "0.18", features = ["derive"] }
config = "0.14"
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
inventory = "0.3"
http = "1"
http-body-util = "0.1"
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"

rustforge = { path = "rustforge" }
rustforge-core = { path = "rustforge/core" }
rustforge-macros = { path = "rustforge/macros" }
rustforge-di = { path = "rustforge/di" }
rustforge-router = { path = "rustforge/router" }
rustforge-http = { path = "rustforge/http" }
rustforge-config = { path = "rustforge/config" }
rustforge-validation = { path = "rustforge/validation" }
rustforge-logger = { path = "rustforge/logger" }
rustforge-testing = { path = "rustforge/testing" }
rustforge-security = { path = "rustforge/security" }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
