[workspace]
resolver = "2"
members = [
    "ruest/core",
    "ruest/macros",
    "ruest/di",
    "ruest/router",
    "ruest/http",
    "ruest/config",
    "ruest/validation",
    "ruest/logger",
    "ruest/testing",
    "ruest/security",
    "ruest/cli",
    "ruest",
    "ruest-db/schema",
    "ruest-db/parser",
    "ruest-db/codegen",
    "ruest-db/runtime",
    "ruest-db/migrate",
    "examples/basic-api",
    "examples/shop-api",
    "examples/ruest-db-demo",
    "benchmarks/axum-baseline",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["hardhacklife"]
repository = "https://github.com/hardhacklife/ruest"
homepage = "https://github.com/hardhacklife/ruest"
documentation = "https://docs.rs/ruest"
readme = "README.md"
rust-version = "1.75"
keywords = ["web", "framework", "nestjs", "axum", "api"]
categories = ["web-programming::http-server", "asynchronous"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
# Toutes les fonctionnalités Axum recommandées pour RUEST (HTTP/1+2, WS, multipart, etc.)
axum = { version = "0.7", features = [
    "http1",
    "http2",
    "json",
    "macros",
    "matched-path",
    "multipart",
    "original-uri",
    "tokio",
    "tower-log",
    "tracing",
    "ws",
    "form",
    "query",
] }
hyper = { version = "1", features = ["http1", "http2", "server", "client"] }
tower = { version = "0.5" }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1"
anyhow = "1"
validator = { version = "0.18", features = ["derive"] }
config = "0.14"
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
inventory = "0.3"
http = "1"
http-body-util = "0.1"
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"

# version = même valeur que [workspace.package].version (requis pour cargo publish)
ruest = { path = "ruest", version = "0.1.0" }
ruest-core = { path = "ruest/core", version = "0.1.0" }
ruest-macros = { path = "ruest/macros", version = "0.1.0" }
ruest-di = { path = "ruest/di", version = "0.1.0" }
ruest-router = { path = "ruest/router", version = "0.1.0" }
ruest-http = { path = "ruest/http", version = "0.1.0" }
ruest-config = { path = "ruest/config", version = "0.1.0" }
ruest-validation = { path = "ruest/validation", version = "0.1.0" }
ruest-logger = { path = "ruest/logger", version = "0.1.0" }
ruest-testing = { path = "ruest/testing", version = "0.1.0" }
ruest-security = { path = "ruest/security", version = "0.1.0" }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

ruest-db-schema = { path = "ruest-db/schema", version = "0.1.0" }
ruest-db-parser = { path = "ruest-db/parser", version = "0.1.0" }
ruest-db-codegen = { path = "ruest-db/codegen", version = "0.1.0" }
ruest-db-runtime = { path = "ruest-db/runtime", version = "0.1.0" }
ruest-db-migrate = { path = "ruest-db/migrate", version = "0.1.0" }
criterion = { version = "0.5", features = ["html_reports"] }
