[package]
name = "ruest"
description = "RUEST (Rust + NestJS) — modular backend framework: DI, controllers, JWT, RuestDB"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ruest-core.workspace = true
ruest-di.workspace = true
ruest-http.workspace = true
ruest-router.workspace = true
ruest-config.workspace = true
ruest-validation.workspace = true
ruest-logger.workspace = true
ruest-macros.workspace = true
ruest-security.workspace = true
ruest-testing.workspace = true

[dev-dependencies]
ruest-testing.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower.workspace = true
serde_json.workspace = true
