[package]
name = "ruest-framework"
description = "RUEST (Rust + NestJS) — framework backend : DI, modules, HTTP Axum, JWT, validation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

# Nom crates.io = ruest-framework ; import dans le code = ruest:: (crate « ruest » pris sur crates.io)
[lib]
name = "ruest"

[dependencies]
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
axum.workspace = true
hyper.workspace = true
http.workspace = true
http-body-util.workspace = true
bytes.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
dotenvy.workspace = true
validator.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
ruest-macros = { path = "macros", version = "0.1.0" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower.workspace = true
serde_json.workspace = true
criterion.workspace = true

[[bench]]
name = "container_resolve"
harness = false

[[bench]]
name = "join_paths"
harness = false
