[package]
name = "rustforge"
description = "RustForge — backend framework inspired by NestJS and Spring Boot"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rustforge-core.workspace = true
rustforge-di.workspace = true
rustforge-http.workspace = true
rustforge-router.workspace = true
rustforge-config.workspace = true
rustforge-validation.workspace = true
rustforge-logger.workspace = true
rustforge-macros.workspace = true
rustforge-testing.workspace = true

[dev-dependencies]
rustforge-testing.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
