[package]
name = "axum-baseline"
version = "0.1.0"
edition = "2021"
publish = false
description = "Baseline Axum pur pour comparer les perfs avec RUEST basic-api"

[[bin]]
name = "axum-baseline"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
