[package]
name = "forgedb-demo"
version = "0.1.0"
edition = "2021"
publish = false
description = "Démo ForgeDB — client généré + PostgreSQL"

[build-dependencies]
forgedb-migrate = { path = "../../forge-db/migrate" }

[dependencies]
forgedb-runtime = { path = "../../forge-db/runtime" }
tokio.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
serde.workspace = true
uuid.workspace = true
