[package]
name = "ruest-db-demo"
version = "0.1.0"
edition = "2021"
publish = false
description = "Démo RuestDB — client généré + PostgreSQL"

[build-dependencies]
ruest-db-migrate.workspace = true

[dependencies]
ruest-db-runtime.workspace = true
tokio.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
serde.workspace = true
uuid.workspace = true
