[package]
name = "shop-api"
version = "0.1.0"
edition = "2021"
publish = false
description = "Exemple RUEST — boutique (customers + orders), structure README complète"

[dependencies]
ruest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
validator.workspace = true
uuid.workspace = true
