[package]
name = "forgedb-codegen"
description = "ForgeDB — génération SQL PostgreSQL et client Rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forgedb-schema.workspace = true
thiserror.workspace = true

[dev-dependencies]
forgedb-parser.workspace = true
