[package]
name = "forgedb-migrate"
description = "ForgeDB — migrations PostgreSQL"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forgedb-schema.workspace = true
forgedb-parser.workspace = true
forgedb-codegen.workspace = true
forgedb-runtime.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
