[package]
name = "forgedb-runtime"
description = "ForgeDB — connexion PostgreSQL (SQLx) et runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
dotenvy.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
chrono.workspace = true
uuid.workspace = true
