[package]
name = "ruest-db-codegen"
description = "RuestDB — génération SQL PostgreSQL et client Rust"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
ruest-db-schema.workspace = true
thiserror.workspace = true

[dev-dependencies]
ruest-db-parser.workspace = true
