[package]
name = "ruest-db-migrate"
description = "RuestDB — migrations PostgreSQL"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
ruest-db-schema.workspace = true
ruest-db-parser.workspace = true
ruest-db-codegen.workspace = true
ruest-db-runtime.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
