[package]
name = "ruest-db-parser"
description = "RuestDB — parser du schema DSL"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
ruest-db-schema.workspace = true
thiserror.workspace = true
