[package]
name = "ruest-cli"
description = "CLI for RUEST (`ruest new`, `ruest g`, `ruest start`, RuestDB migrations)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "ruest"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
ruest-db-migrate.workspace = true
