[package]
name = "ruest-config"
description = "Configuration system for RUEST"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
config.workspace = true
dotenvy.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
