[package]
name = "ruest-core"
description = "Core runtime, modules and application lifecycle for RUEST"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
ruest-di.workspace = true
ruest-router.workspace = true
