[package]
name = "ruest-macros"
description = "Procedural macros for RUEST (controllers, modules, services)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

# Référencé par le code généré des gardes
async-trait.workspace = true
