[package]
name = "ruest-security"
description = "Authentication & security (JWT, guards, RBAC) for RUEST"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
ruest-http.workspace = true
ruest-di.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower.workspace = true
http-body-util.workspace = true
