[package]
name = "rustforge-cli"
description = "CLI for RustForge framework (command: forge)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[[bin]]
name = "rustforge"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
forgedb-migrate = { path = "../../forge-db/migrate" }
