[package]
name = "rustforge-core"
description = "Core runtime, modules and application lifecycle for RustForge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
rustforge-di.workspace = true
rustforge-router.workspace = true
